Implement Create Tree API
